--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ Markdown==3.3.3
 matplotlib==3.3.2
 networkx==2.5
 nibabel==3.1.1
+nilearn==0.7.1
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
